@@ -21,7 +21,6 @@
 # include "config.h"
 #endif
 
-#include <ctype.h>
 #include <errno.h>
 #include <limits.h>
 #include <stdbool.h>
